<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".StarterActivity">
    <ImageView
        android:id="@+id/startIllustration"
        android:src="@drawable/coffee_vec"
        app:tint="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="200dp"
        android:layout_height="200dp"/>
    <TextView
        android:id="@+id/headlineTitle"
        app:layout_constraintTop_toBottomOf="@id/startIllustration"
        android:layout_marginTop="30dp"
        android:text="@string/headline_text"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/headlineDesc"
        app:layout_constraintTop_toBottomOf="@id/headlineTitle"
        android:layout_marginTop="30dp"
        android:text="@string/headline_desc"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/nextPageBtn"
        android:text="@string/next_page_btn_text"
        app:layout_constraintTop_toBottomOf="@id/headlineDesc"
        android:theme="@style/Theme.Button"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>